Resolve broken image icon, add height to navbar to prevent overlapping elements

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -303,6 +303,7 @@ li {
 
 #nav-bar {
   display: block;
+  height: 10%;
 }
 
 .comment-img {
